- pruned unnecessary methods merge into java 8 version